<resources>
    <string name="intro_first_page_title">&#160;mobil tətbiqinə xoş gəlmisiniz!</string>
    <string name="plastic_card_number">Plastik kart nömrəsi ilə giriş</string>
    <string name="welcome">Xoş gəlmişsiniz!</string>
    <string name="verification">Təsdiq kodu</string>
    <string name="verification_text">SMS - məktub vasitəsilə göndərildi.</string>
    <string name="password">Şifrə</string>
    <string name="back">Geri qayıt</string>
    <string name="go_back">Geriyə</string>
    <string name="verify_mobile_number">Mobil nömrənizi təsdiqləyin</string>
    <string name="registration">Qeydiyyatdan keç</string>
    <string name="register">Qeydiyyat</string>
    <string name="by_pressing_continue">Davam et düyməsinə basmaqla siz</string>
    <string name="privacy_and_policy">&#160;tətbiqdən istifadə şərtləri&#160;</string>
    <string name="accepting_with">ilə razılaşırsınız</string>
    <string name="register_by_cif">Müştəri kodu ilə (CIF) qeydiyyat</string>
    <string name="register_by_card">Kart üzrə qeydiyyat</string>
    <string name="registration_by_card_enter_card_number">Plastik kart nömrəsini daxil edin</string>
    <string name="enter_cif">Müştəri kodunuzu (CIF) daxil edin</string>
    <string name="enter_birthdate">Doğum tarixinizi daxil edin</string>
    <string name="unknown_error_occurred">Bilinməyən xəta baş verdi.</string>
    <string name="continue_to_next">Davam et</string>
    <string name="register_by_number">Mobil nömrə ilə qeydiyyat</string>
    <string name="register_by_email">Email ünvanı ilə qeydiyyat</string>
    <string name="login_by_number">Mobil nömrə ilə giriş</string>
    <string name="login_by_email">Email ünvanı ilə giriş</string>
    <string name="do_have_account">Hesabınız var?&#160;</string>
    <string name="do_not_have_account">Hesabınız yoxdur?&#160;</string>
    <string name="enter_email">Email ünvanınızı daxil edin</string>
    <string name="enter_number">Mobil nömrənizi daxil edin</string>
    <string name="invalid_email">Email ünvanı formatı düzgün deyil</string>
    <string name="empty_password">Şifrə boş ola bilməz</string>
    <string name="passwords_not_match">Şifrə üst-üstə düşmür</string>
    <string name="email">Email</string>
    <string name="password_again">Şifrəni təkrar daxil edin</string>
    <string name="sign_in">Daxil ol</string>
    <string name="put_pin_code">PIN şifrə təyin edin</string>
    <string name="enter_pin_code">PIN şifrəni daxil edin</string>
    <string name="put_pin_code_again">PIN şifrəni təkrar edin</string>
    <string name="put_pin_correct">PIN düzgündür</string>
    <string name="put_pin_wrong">PIN düzgün deyil</string>
    <string name="pin_ask_policy">Hər dəfə tətbiqə daxil olduqda sizdən \nbu şifrə istəniləcək</string>
    <string name="fingerprint">Barmaq izi</string>
    <string name="fingerprint_suggestion">Giriş üçün barmaq izini\nəlavə edin</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="later">Daha sonra</string>
    <string name="send_it">Göndərmək</string>
    <string name="login">Giriş</string>
    <string name="enter">Daxil ol</string>
    <string name="forget_password"><u>Şifrənizi unutmusuz?</u></string>
    <string name="verify">Təsdiqləmək</string>
    <string name="second">saniyə</string>
    <string name="send_again"><u>Yenidən göndər</u></string>
    <string name="next">Növbəti</string>
    <string name="password_recovery">Şifrənin bərpası</string>
    <string name="password_recovery_password_changed">Şifrə yeniləndi. Daxil olun.</string>
    <string name="password_recovery_fin_code_help">Şəxsiyyət vəsiqəsinin FIN kodu</string>
    <string name="password_recovery_by_fin">FIN kod ilə</string>
    <string name="password_recovery_by_pan">Plastik kart ilə</string>
    <string name="password_recovery_enter_username">Email yaxud mobil nömrə</string>
    <string name="password_recovery_enter_username_is_empty">Email yaxud mobil nömrənizi daxil edin.</string>
    <string name="password_recovery_enter_fin">FIN kodunuzu daxil edin</string>
    <string name="password_recovery_enter_fin_is_empty">FIN kod 7 simvol olmalıdır</string>
    <string name="password_recovery_enter_pan">Plastik kartın son 4 rəqəmi</string>
    <string name="password_recovery_enter_pan_is_empty">Kart nömrəsi 4 simvol olmalıdır</string>
    <string name="with_verify_number">Təsdiq nömrəsi ilə</string>
    <string name="with_last_4_digits">Plastik kartın son 4 rəqəmi ilə</string>
    <string name="enter_verify_number">Təsdiq nömrəsini daxil edin</string>
    <string name="enter_last_4_digits">Son 4 rəqəmi daxil edin</string>
    <string name="enter_verify_code">Təsdiq kodunu daxil edin</string>
    <string name="enter_new_password">Yeni şifrəni daxil edin</string>
    <string name="invalid_mobile_number">Mobil nömrənin formatı düzgün deyil</string>
    <string name="enter_pin">PIN daxil edin.</string>
    <string name="make_changes">Redaktə et</string>
    <string name="enter_new_email">Yeni email ünvanı daxil edin</string>
    <string name="enter_current_password">Cari şifrəni daxil edin</string>
    <string name="enter_new_password_repeat">Yeni şifrəni daxil edin</string>
    <string name="enter_current_phone_number">Cari mobil nömrəni tam daxil edin</string>
    <string name="enter_new_phone_number">Yeni mobil nömrəni daxil edin</string>
    <string name="invalid_new_phone_number_format">Yeni mobil nömrə formatı düzgün deyil</string>
    <string name="profile_update_verification_success">%s yenilənməsi uğurla tamamlandı!</string>
    <string name="verify_code_sent_to_number">Təsdiq kodu %s nömrəsinə SMS - məktub vasitəsilə göndərildi.</string>
    <string name="verify_code_sent_to_email">Təsdiq kodu %s ünvanına göndərildi.</string>
    <string name="mobile_number">Mobil nömrə</string>
    <string name="email_update_finish">E-mail ünvanınızın</string>
    <string name="mobile_number_update_finish">Mobil nömrənizin</string>
    <string name="password_update_finish">Şifrənizin</string>
    <string name="going_to_sign_in_page">Giriş səhifəsinə yönləndirilicəksiniz.</string>
    <string name="profile_update_successful" formatted="false">%s yenilənməsi\nuğurla tamamlandı! %s</string>
    <string name="thank_you">Təşəkkürlər</string>
    <string name="settings">Tənzimləmələr</string>
    <string name="personal_info">Şəxsi məlumatlarım</string>
    <string name="language">Dil</string>
    <string name="security">Təhlükəsizlik</string>
    <string name="allowed_devices">İcazə verilmiş cihazlar</string>
    <string name="current_device">Mövcud cihaz</string>
    <string name="other_devices">Əlavə cihazlar</string>
    <string name="disable_device">Deaktiv et</string>
    <string name="enable_device">Aktivləşdir</string>
    <string name="device_unregistered">Cihaz qeydiyyatdan silindi</string>
    <string name="device_registered">Cihaz qeydiyyata alındı</string>
    <string name="fill_all_fields">Bütün xanaları doldurun</string>
    <string name="nav_menu_item_payments">Ödənişlər</string>
    <string name="nav_menu_item_my_info">Məlumatlarım</string>
    <string name="nav_menu_item_main_page">Əsas səhifə</string>
    <string name="nav_menu_item_others">Digər</string>
    <string name="nav_menu_item_settings">Tənzimləmələr</string>
    <string name="nav_menu_item_logout">Çıxış</string>
    <string name="nav_menu_item_payments_and_transactions">Ödənişlər və köçürmələr</string>
    <string name="nav_menu_item_about_bank">Bank haqqında</string>
    <string name="nav_menu_item_bank_products">Bank məhsulları</string>
    <string name="nav_menu_item_exchange_rates">Valyuta məzənnələri</string>
    <string name="nav_menu_item_bank_news">Bank xəbərləri</string>
    <string name="nav_menu_item_bank_proposals">Təkliflər</string>
    <string name="nav_menu_item_bank_service_points">Xidmət nöqtələrimiz</string>
    <string name="nav_menu_item_bank_contacts">Bankla əlaqə</string>
    <string name="nav_menu_item_my_funds">Mənim vəsaitlərim</string>
    <string name="nav_menu_item_my_cards">Kartlar</string>
    <string name="no_my_cards">Kartınız yoxdur</string>
    <string name="nav_menu_item_my_accounts">Hesablar</string>
    <string name="no_my_accounts">Hesabınız yoxdur</string>
    <string name="nav_menu_item_my_loans">Kreditlər</string>
    <string name="no_my_loans">Kreditiniz yoxdur</string>
    <string name="nav_menu_item_my_deposits">Əmanətlər</string>
    <string name="no_my_deposits">Əmanətiniz yoxdur</string>
    <string name="exchange_rates">Valyuta məzənnəsi</string>
    <string name="exchange_rate_type_cash">Nağd</string>
    <string name="exchange_rate_type_non_cash">Nağdsız</string>
    <string name="exchange_currency">Valyuta</string>
    <string name="exchange_sell_rate">Satış</string>
    <string name="exchange_buy_rate">Alış</string>
    <string name="loan_is_overdue">Gecikmə var</string>
    <string name="loan_percent_to_end_of_date">Müddətin sonuna %</string>
    <string name="loan_percent_type_yearly">İllik faiz dərəcəsi</string>
    <string name="loan_planned_due_date">Planlaşdırılan bağlanma tarixi</string>
    <string name="deposit_planned_due_date">Planlaşdırılan bitmə tarixi</string>
    <string name="loan_start_date">Verilmə tarixi</string>
    <string name="start_date">Başlama tarixi</string>
    <string name="loan_duration_monthly">Müddət</string>
    <string name="loan_overdue_balance">Gecikən faiz borcu məbləği</string>
    <string name="loan_amount">Kreditin məbləği</string>
    <string name="loan_balance">Kreditin qalığı</string>
    <string name="loan_currency">Kreditin valyutası</string>
    <string name="loan_sub_account_number">Sub hesab nömrəsi</string>
    <string name="loan_account_number">Hesab nömrəsi</string>
    <string name="bank_branch">Bank filialı</string>
    <string name="loan_type">Kreditin növü</string>
    <string name="account_name">Hesab adı</string>
    <string name="account_color">Hesab rəngi</string>
    <string name="account_owner_initials">Hesab sahibinin adı, soyadı</string>
    <string name="account_number">Hesab nömrəsi</string>
    <string name="account_iban">IBAN nömrəsi</string>
    <string name="account_currency">Hesab valyutası</string>
    <string name="account_open_date">Hesabın açılma tarixi</string>
    <string name="account_close_date">Hesabın bitmə tarixi</string>
    <string name="history">Tarixçə</string>
    <string name="pay">Ödəmək</string>
    <string name="cards">Kartlar</string>
    <string name="accounts">Hesablar</string>
    <string name="search">Axtarış</string>
    <string name="transfer_amount">Məbləğ</string>
    <string name="money_transfer_number">Köçürmə nömrəsi</string>
    <string name="enter_transfer_number">Köçürmə nömrəsini daxil edin</string>
    <string name="payment_amount">Ödəniş məbləği</string>
    <string name="ACCOUNT_TRANSFERS">Köçürmələr</string>
    <string name="local_transfers">Ölkə daxili köçürmələr</string>
    <string name="iban_code">Vəsaiti alanın hesabı (IBAN)</string>
    <string name="operation_description">Əməliyyatın təsviri</string>
    <string name="enter_iban">Vəsaiti alanın hesabını (IBAN) daxil edin</string>
    <string name="client_name">Vəsaiti alanın adı</string>
    <string name="enter_client_name">Vəsaiti alanın adını daxil edin</string>
    <string name="choose_bank_branch">Bank filialını seçin</string>
    <string name="budget_payment">Büdcə ödənişi</string>
    <string name="budget_destination">Təsnifat kodu</string>
    <string name="level">Səviyyə kodu</string>
    <string name="choose_budget_destination">Təsnifat kodunu seçin</string>
    <string name="choose_budget_level">Səviyyə kodunu seçin</string>
    <string name="choose_search_criteria">Axtarış üçün aşağıdakı xanalardan birini seçin</string>
    <string name="by_branch_name">Filial adı üzrə</string>
    <string name="by_branch_number">Filial nömrəsi üzrə</string>
    <string name="by_tax_number">Vergi nömrəsi üzrə</string>
</resources>