<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.local_transfers.LocalTransfersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/goBack"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/go_back"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local_transfers"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topPanel"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topPanel"
            app:layout_constraintBottom_toTopOf="@id/make_transfer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:layout_marginBottom="@dimen/sixteen_dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/bank_branch"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/branch_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six_dp"
                    android:background="@drawable/shape_edit_text_selector"
                    android:enabled="true"
                    android:longClickable="false"
                    android:focusable="false"
                    android:clickable="true"
                    android:hint="@string/choose_bank_branch"
                    android:padding="@dimen/sixteen_dp"
                    android:textSize="17sp"
                    android:drawableEnd="@drawable/ic_arrow_next"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/client_name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six_dp"
                    android:background="@drawable/shape_edit_text_selector"
                    android:digits="qazwsxedcrfvtgbyhnujmiklopQAZWSXEDCRFVTGBYHNUJMIKLOP "
                    android:hint="@string/enter_client_name"
                    android:inputType="text|textCapCharacters"
                    android:padding="@dimen/sixteen_dp"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/money_transfer_number"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/transfer_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six_dp"
                    android:background="@drawable/shape_edit_text_selector"
                    android:hint="@string/enter_transfer_number"
                    android:inputType="text|textCapCharacters"
                    android:padding="@dimen/sixteen_dp"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/iban_code"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/iban_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six_dp"
                    android:background="@drawable/shape_edit_text_selector"
                    android:hint="@string/enter_iban"
                    android:inputType="text|textCapCharacters"
                    android:padding="@dimen/sixteen_dp"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/pay"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/from_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/from_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cards"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:drawablePadding="@dimen/six_dp"
                        app:drawableTopCompat="@drawable/ic_my_cards" />

                    <TextView
                        android:id="@+id/from_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accounts"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:drawablePadding="@dimen/six_dp"
                        app:drawableTopCompat="@drawable/ic_bank_transfer" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/from_cards_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:background="@drawable/gradient_spinner">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/from_cards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:overlapAnchor="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/from_accounts_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:background="@drawable/gradient_spinner"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/from_accounts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:overlapAnchor="false" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/payment_amount"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/transfer_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/six_dp"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:background="@drawable/shape_edit_text_selector"
                    android:hint="@string/transfer_amount"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/sixteen_dp"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/operation_description"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/operation_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:layout_marginTop="@dimen/six_dp"
                    android:background="@drawable/shape_edit_text_selector"
                    android:inputType="text"
                    android:padding="@dimen/sixteen_dp"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/is_budget_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twenty_four_dp"
                    android:text="@string/budget_payment"
                    android:textColor="@color/textColorLight"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"/>

                <LinearLayout
                    android:id="@+id/budget_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/twenty_four_dp"
                        android:text="@string/budget_destination"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/budget_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/six_dp"
                        android:background="@drawable/shape_edit_text_selector"
                        android:enabled="true"
                        android:longClickable="false"
                        android:focusable="false"
                        android:clickable="true"
                        android:hint="@string/choose_budget_destination"
                        android:padding="@dimen/sixteen_dp"
                        android:textSize="17sp"
                        android:drawableEnd="@drawable/ic_arrow_next"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/twenty_four_dp"
                        android:text="@string/level"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/budget_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/six_dp"
                        android:background="@drawable/shape_edit_text_selector"
                        android:enabled="true"
                        android:longClickable="false"
                        android:focusable="false"
                        android:clickable="true"
                        android:hint="@string/choose_budget_level"
                        android:padding="@dimen/sixteen_dp"
                        android:textSize="17sp"
                        android:drawableEnd="@drawable/ic_arrow_next"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/make_transfer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:enabled="false"
            android:background="@drawable/shape_button_selector"
            android:elevation="3dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>